# HachiTune

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
Resources/lang/: en.json  ja.json  zh-TW.json  zh.json
Source/: Main.cpp
Source/Audio/: AudioEngine.cpp  AudioEngine.h  FCPEPitchDetector.cpp  RMVPEPitchDetector.cpp  RMVPEPitchDetector.h  RealtimePitchProcessor.cpp  SOMEDetector.cpp  SOMEDetector.h  Vocoder.cpp  Vocoder.h
Source/Audio/Analysis/: AudioAnalyzer.cpp  AudioAnalyzer.h
Source/Audio/IO/: AudioFileManager.cpp  AudioFileManager.h  MidiExporter.cpp  MidiExporter.h
Source/Audio/Synthesis/: IncrementalSynthesizer.cpp
Source/Models/: Note.h  Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h
Source/Plugin/: ARADocumentController.cpp  ARADocumentController.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/UI/: Commands.h  CustomMenuBarLookAndFeel.h  CustomTitleBar.cpp  MainComponent.cpp  MainComponent.h  MainComponent.mm  ParameterPanel.cpp  ParameterPanel.h  PianoRollComponent.cpp  PianoRollComponent.h  PianoRollWorkspaceView.cpp  PianoRollWorkspaceView.h  SettingsComponent.cpp  SettingsComponent.h  StyledComponents.cpp  StyledComponents.h  ToolbarComponent.cpp  ToolbarComponent.h  WaveformComponent.cpp
Source/UI/Main/: MenuHandler.cpp  MenuHandler.h  SettingsManager.cpp
Source/UI/PianoRoll/: BoxSelector.cpp  BoxSelector.h  CoordinateMapper.h  NoteSplitter.cpp  NoteSplitter.h  PianoRollRenderer.cpp  PianoRollRenderer.h  PitchEditor.cpp  PitchEditor.h  ScrollZoomController.cpp  ScrollZoomController.h
Source/UI/Workspace/: DraggablePanel.cpp  DraggablePanel.h  PanelContainer.cpp  RoundedCard.cpp  RoundedCard.h  SidebarComponent.cpp  SidebarComponent.h  WorkspaceComponent.cpp  WorkspaceComponent.h
Source/Utils/: BasePitchCurve.cpp  Constants.h  CurveResampler.cpp  CurveResampler.h  Localization.h  PitchCurveProcessor.cpp  PitchCurveProcessor.h  Theme.cpp  Theme.h  UndoManager.h  WindowSizing.cpp  WindowSizing.h
cmake/: Asio.cmake
